--- a/inventory/sample/inventory.ini
+++ b/inventory/sample/inventory.ini
@@ -3,5 +3,11 @@ node-1 ansible_host=10.8.0.61 ip=10.8.0.61 ansible_ssh_user=root ansible_ssh_pas
 node-2 ansible_host=10.8.0.62 ip=10.8.0.62 ansible_ssh_user=root ansible_ssh_pass=password ansible_become_password=password
 node-3 ansible_host=10.8.0.63 ip=10.8.0.63 ansible_ssh_user=root ansible_ssh_pass=password ansible_become_password=password
 
+[controller]
+
+[swarm_manager]
+
+[swarm_worker]
+
 [all:vars]
 ansible_become=true
